--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,7 @@ DISCORD_CALLBACK_URL="http://localhost:3000/auth/discord/callback"
 SESSION_SECRET="SECRET FOR AUTH"
 MONGO_URI="Not used"
 BASE_URL="http://localhost:3000"
+
+# Bunny.net configuration
+BUNNY_API_KEY="Your Bunny.net API key here"
+BUNNY_STORAGE_ZONE="Your Bunny.net storage zone name here"
