--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,19 @@
+# Discord OAuth Configuration
 DISCORD_CLIENT_ID="DISCORD APP ID"
 DISCORD_CLIENT_SECRET="DISCORD APP SECRET"
 DISCORD_CALLBACK_URL="http://localhost:3000/auth/discord/callback"
+
+# Session Configuration
 SESSION_SECRET="SECRET FOR AUTH"
+
+# Database Configuration
 MONGO_URI="Not used"
+
+# Application Configuration
 BASE_URL="http://localhost:3000"
 
-# Bunny.net configuration
-BUNNY_API_KEY="Your Bunny.net API key here"
-BUNNY_STORAGE_ZONE="Your Bunny.net storage zone name here"
+# AWS S3 Configuration
+AWS_ACCESS_KEY_ID="Your AWS access key ID here"
+AWS_SECRET_ACCESS_KEY="Your AWS secret access key here"
+AWS_REGION="your-region-here" # e.g., us-east-1
+AWS_S3_BUCKET="your-bucket-name-here"
