--- a/.env.template
+++ b/.env.template
@@ -11,6 +11,7 @@ MONGO_URI="Not used"
 
 # Application Configuration
 BASE_URL="http://localhost:3000"
+PORT=3000
 
 # AWS S3 Configuration
 AWS_ACCESS_KEY_ID="Your AWS access key ID here"
