--- a/.env.template
+++ b/.env.template
@@ -13,8 +13,11 @@ MONGO_URI="Not used"
 BASE_URL="http://localhost:3000"
 PORT=3000
 
-# AWS S3 Configuration
+# AWS Configuration
 AWS_ACCESS_KEY_ID="Your AWS access key ID here"
 AWS_SECRET_ACCESS_KEY="Your AWS secret access key here"
 AWS_REGION="your-region-here" # e.g., us-east-1
 AWS_S3_BUCKET="your-bucket-name-here"
+
+# add a url here to activate CDN
+AWS_CLOUDFRONT_URL"" # e.g. https://<id>.cloudfront.net,
