--- a/.env.template
+++ b/.env.template
@@ -20,4 +20,4 @@ AWS_REGION="your-region-here" # e.g., us-east-1
 AWS_S3_BUCKET="your-bucket-name-here"
 
 # add a url here to activate CDN
-AWS_CLOUDFRONT_URL"" # e.g. https://<id>.cloudfront.net,
+AWS_CLOUDFRONT_URL="" # e.g. https://<id>.cloudfront.net,
