--- a/.env.template
+++ b/.env.template
@@ -7,7 +7,7 @@ DISCORD_CALLBACK_URL="http://localhost:3000/auth/discord/callback"
 SESSION_SECRET="SECRET FOR AUTH"
 
 # Database Configuration
-MONGO_URI="Not used"
+MONGO_URI="MONGO URL"
 
 # Application Configuration
 BASE_URL="http://localhost:3000"
