--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "@joshdb/core": "^1.2.7",
     "@joshdb/json": "^1.0.5",
-    "axios": "^1.7.2",
     "aws-sdk": "^2.1691.0",
+    "axios": "^1.7.2",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
